--- a/README
+++ b/README
@@ -3,7 +3,7 @@ version 0.41:
 
   Pure Perl API for Proxmox Virtual Environment
 
-This software is Copyright (c) 2025 by Dean Hamstad.
+This software is Copyright (c) 2025 by Dean Hamstead.
 
 This is free software, licensed under:
 
